feat: implementando regras de usuario autenticado.

--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Concessionaria/Cadastrar.cshtml
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Concessionaria/Cadastrar.cshtml
@@ -1,4 +1,7 @@
 ﻿@model ConcessionariaApp.Application.Dtos.Concessionarias.CadastrarConcessionariaDTO
+@{
+    ViewData["Title"] = "Concessionária";
+}
 <style>
     .validation-summary-errors {
         background: #ff00003d;
