--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Veiculo/Cadastrar.cshtml
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Veiculo/Cadastrar.cshtml
@@ -1,4 +1,7 @@
 ﻿@model ConcessionariaApp.Application.Dtos.Veiculos.CadastrarVeiculoDTO
+@{
+    ViewData["Title"] = "Veículo";
+}
 <style>
     .validation-summary-errors {
         background: #ff00003d;
@@ -68,7 +71,6 @@
                             <button type="submit" class="btn btn-color-custom col-6 text-center">Salvar</button>
                         </div>
                     </div>
-
                 </form>
             </div>
         </div>
