--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Login/Registrar.cshtml
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Login/Registrar.cshtml
@@ -11,27 +11,27 @@
                 <form asp-action="Registrar" method="post">
                     <div class="mb-1">
                         <label asp-for="Nome" class="form-label">Nome</label>
-                        <input asp-for="Nome" class="form-control" />
+                        <input asp-for="Nome" class="form-control" placeholder="Digite seu nome" />
                         <span asp-validation-for="Nome" class="text-danger"></span>
                     </div>
                     <div class="mb-1">
                         <label asp-for="Sobrenome" class="form-label">Sobrenome</label>
-                        <input asp-for="Sobrenome" class="form-control" />
+                        <input asp-for="Sobrenome" class="form-control" placeholder="Digite seu sobrenome" />
                         <span asp-validation-for="Sobrenome" class="text-danger"></span>
                     </div>
                     <div class="mb-1">
                         <label asp-for="Email" class="form-label">Email</label>
-                        <input asp-for="Email" class="form-control" />
+                        <input asp-for="Email" class="form-control" placeholder="Digite seu email" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="mb-1">
                         <label asp-for="Senha" class="form-label">Senha</label>
-                        <input asp-for="Senha" type="password" class="form-control" />
+                        <input asp-for="Senha" type="password" class="form-control" placeholder="Digite sua senha" />
                         <span asp-validation-for="Senha" class="text-danger"></span>
                     </div>
                     <div class="mb-1">
                         <label asp-for="SenhaConfirmacao" class="form-label">Confirmar Senha</label>
-                        <input asp-for="SenhaConfirmacao" type="password" class="form-control" />
+                        <input asp-for="SenhaConfirmacao" type="password" class="form-control" placeholder="Confirme sua senha" />
                         <span asp-validation-for="SenhaConfirmacao" class="text-danger"></span>
                     </div>
                     <div class="d-grid">
@@ -45,3 +45,7 @@
         </div>
     </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
