--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Shared/_Layout.cshtml
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Shared/_Layout.cshtml
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ConcessionariaApp.MVC</title>
+    <title>@ViewData["Title"] - Concessionaria</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/icons/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ConcessionariaApp.MVC.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/custom-style.css" asp-append-version="true" />
