--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/_ViewImports.cshtml
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ConcessionariaApp.MVC
 @using ConcessionariaApp.MVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ConcessionariaApp.MVC
